// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`splitTwammOrder > various pools > one pool, token0 - priceImpact 1`] = `0.06768687463213663`;

exports[`splitTwammOrder > various pools > one pool, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 29572037879931651n,
  },
]
`;

exports[`splitTwammOrder > various pools > one pool, token1 - priceImpact 1`] = `0.06768687463213663`;

exports[`splitTwammOrder > various pools > one pool, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 29572037879931657n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token0 - priceImpact 1`] = `0.08965890934711354`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 41821177036810446n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token1 - priceImpact 1`] = `0.09812126015792012`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, diff sale rate changes, maxSplits 2, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 41417116263934591n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token0 - priceImpact 1`] = `0.04441484096380721`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 15118836440023420n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 14969532844295689n,
  },
]
`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token1 - priceImpact 1`] = `0.04441484096380721`;

exports[`splitTwammOrder > various pools > three pools, same liquidity, maxSplits 2, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 15118836440023424n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 14969532844295692n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token0 - priceImpact 1`] = `0.025965958625014315`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 282179317095523925n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token1 - priceImpact 1`] = `0.025965958383309635`;

exports[`splitTwammOrder > various pools > two pools, one with 10x liquidity, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 282179315137456691n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token0 - priceImpact 1`] = `0.07656065959952885`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 29286323767419650n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token1 - priceImpact 1`] = `0.08965890935085709`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, different rates, maxSplits 1, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 41821177036810455n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token0 - priceImpact 1`] = `0.05609058203462155`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 21381263540781848n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 21170116370792619n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token1 - priceImpact 1`] = `0.035982967767129184`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, same token1 sale rate change for both pools, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 5406386711306600n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 5352395221635244n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token0 - priceImpact 1`] = `0.04441484096380721`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token0 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 15118836440023420n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 14969532844295689n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 - priceImpact 1`] = `0.04441484096380721`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 1`] = `
[
  {
    "amount": 500000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 15118836440023424n,
  },
  {
    "amount": 500000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 14969532844295692n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token0 - priceImpact 1`] = `0.09812126015792043`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token0 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 6805647338418769269267492148635364229n,
    "otherTokenAmount": 41417116263934581n,
  },
]
`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token1 - priceImpact 1`] = `0.06768687463213663`;

exports[`splitTwammOrder > various pools > two pools, same liquidity, token1 sale rate change for one pool, token1 1`] = `
[
  {
    "amount": 1000000000000000000n,
    "fee": 3402823669209384634633746074317682114n,
    "otherTokenAmount": 29572037879931658n,
  },
]
`;
